--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item active">
-            <a class="nav-link text-light" href="#">Inicio <span class="sr-only">(current)</span></a>
+            <a class="nav-link text-light" href="#">Comienzo <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-light" href="#">Productos</a>
@@ -48,7 +48,7 @@
   </nav>
   <!-- cartas -->
   <section class="container" id="productos">
-    <h1 class=" text-center">Nuestros Productos</h1>
+    <h1 class=" text-center">Poductos</h1>
     <div class="row">
       <!-- primera -->
       <div class="col-sm-4 col-12 px-5 mb-4">
