Agrega categoria de imagenes

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <a class="nav-link text-light" href="#">Productos</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link text-light" href="#">Imagenes</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link text-light" href="#">Contacto</a>
           </li>
         </ul>
